Add screen recording functionality

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
   "permissions": [
     "storage",
     "activeTab",
-    "scripting"
+    "scripting",
+    "desktopCapture"
   ],
   "action": {
     "default_popup": "popup.html"
